classDiagram
    direction LR

    %% ── Core Auth & Users (Héritage) ──
    class User {
        +int id
        +string name
        +string email
        +string password
        +string phone_number
        +string status
        +datetime email_verified_at
        +string remember_token
    }

    class Client {
        +float target_goal
        +float current_weight
        +float height
        +date program_started_at
        +int duration_weeks
        +/date deadline
        +/int days_left
    }

    class Staff {
        +string bio
    }

    class Specialty {
        +int id
        +string name
    }

    %% ── Nutrition & Programs ──
    class MealCategory {
        +int id
        +string name
    }

    class Meal {
        +int id
        +string name
        +string details
        +float protein
        +float carbs
        +float fats
        +int calories
    }

    class Program {
        +int id
        +string title
    }

    class ProgramItem {
        +int id
        +int day_of_week
        +string time_slot
    }

    class MealValidation {
        +int id
        +datetime validated_at
        +bool is_completed
    }

    %% ── Monitoring & Finance ──
    class Evolution {
        +int id
        +float weight
        +string[] images
        +date recorded_at
    }

    class Payment {
        +int id
        +float amount
        +date date
        +string status
    }

    %% ── System ──
    class SystemNotification {
        +int id
        +string title
        +string body
        +string type
        +bool is_read
        +string link
    }

    class SystemSetting {
        +string key
        +string value
        +get(key) string
    }

    %% ── Structural Associations ──
    User <|-- Client : est un
    User <|-- Staff : est un
    User "1" --> "*" SystemNotification : reçoit

    Staff "*" -- "*" Specialty : spécialisé dans
    Staff "1" --> "*" Program : crée

    Client "0..*" --> "0..1" Program : suit

    Program "1" *-- "*" ProgramItem : contient
    ProgramItem "*" --> "1" Meal : planifie
    Meal "*" --> "1" MealCategory : appartient à

    MealValidation "*" --> "1" Client : validé par
    MealValidation "*" --> "1" ProgramItem : concerne

    Client "1" *-- "*" Evolution : historique poids
    Client "1" *-- "*" Payment : paye